force-app/main/default/objects/Activity/fields/Original_System_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Original_System_Entered_By__c</fullName>
    <label>Original System Entered By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>