force-app/main/default/objects/Activity/fields/X18_Digit_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Activity_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Activity ID</label>
    <type>Text</type>
</CustomField>